--- a/IS202/web/WEB-INF/web.xml
+++ b/IS202/web/WEB-INF/web.xml
@@ -20,12 +20,14 @@
      <security-constraint>
         <!--  to access these pages  -->
         <web-resource-collection>
-            <web-resource-name>Modulsider</web-resource-name>
-            <url-pattern>/ModulForms</url-pattern>
+            <web-resource-name>Hovedside</web-resource-name>
+            <url-pattern>/MainPage</url-pattern>
         </web-resource-collection>
         <!--  the user must have one of these roles  -->
         <auth-constraint>
             <role-name>Student</role-name>
+            <role-name>Foreleser</role-name>
+            <role-name>Hjelpelærer</role-name>
         </auth-constraint>
         
     </security-constraint>
