--- a/IS202/web/WEB-INF/web.xml
+++ b/IS202/web/WEB-INF/web.xml
@@ -22,7 +22,7 @@
         <web-resource-collection>
             <web-resource-name>Hovedside</web-resource-name>
             <url-pattern>/MainPage</url-pattern>
-            <url-pattern>/ModulForms</url-pattern>
+            <url-pattern>/ModuleMenu</url-pattern>
          </web-resource-collection>
         <!--  the user must have one of these roles  -->
         <auth-constraint>
