husker ikke alt

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -41,7 +41,7 @@
             <url-pattern>/ModuleMenuServlet</url-pattern>
             <url-pattern>/ModulePageServlet</url-pattern>
             <url-pattern>/MemberListServlet</url-pattern>
-            <url-pattern>/InnleveringServlet</url-pattern>
+            <url-pattern>/DeliveryServlet</url-pattern>
             <url-pattern>/DeleteModuleServlet</url-pattern>
 
         </web-resource-collection>
