--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -43,6 +43,7 @@
             <url-pattern>/MemberListServlet</url-pattern>
             <url-pattern>/DeliveryServlet</url-pattern>
             <url-pattern>/DeleteModuleServlet</url-pattern>
+            <url-pattern>/StudentProgressServlet</url-pattern>
 
         </web-resource-collection>
         <!--  the user must have one of these roles  -->
