--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -45,6 +45,8 @@
             <url-pattern>/DeleteModuleServlet</url-pattern>
             <url-pattern>/StudentProgressServlet</url-pattern>
             <url-pattern>/GradingServlet</url-pattern>
+            <url-pattern>/MemberSearchServlet</url-pattern>
+
 
 
         </web-resource-collection>
